fix country overflow + new logo

--- a/app/scss/pages/_flag-nerd-hard.scss
+++ b/app/scss/pages/_flag-nerd-hard.scss
@@ -8,12 +8,10 @@
 
 	.flag-container {
 		margin-top: 1rem;
-		margin-bottom: 2rem;
-		height: 10rem;
 		width: 15rem;
 
 		.flag {
-			height: 100%;
+			height: 10rem;
 			width: 100%;
 			background-size: contain;
 			background-repeat: no-repeat;
